--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
         background-color: lightblue;
         display: grid;
         grid-template-columns: 3fr 1fr;
-        grid-template-rows: 1fr 8fr;
+        grid-template-rows: 1fr 7fr;
     }
 
     .info {
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        margin-top: auto;
     }
 
     .code textarea {
@@ -83,6 +81,7 @@
     .preview {
         position: relative;
         display: inline-block;
+        margin-top: auto;
     }
 
     .clickable-area {
@@ -114,6 +113,7 @@
     .addBoxButton {
         padding: 0.4rem;
     }
+
     .addBoxButton button {
         margin-bottom: 0.5rem;
     }
@@ -134,16 +134,16 @@
                     <label for="url">URL:</label>
                     <input type="text" class="url" id="url" v-model="selectedBox.url"></input> <br>
                     <label for="title">Title:</label>
-                    <input type="text" class="title" id="title" v-model="selectedBox.title"></input>
+                    <input type="text" class="title" id="title" v-model="selectedBox.title"></input> <br>
+                    <button @click="deleteBox">Delete</button>
                 </div>
             </div>
             <div class="info">
-                <div>Note: resizing might break shit and the calculations. Resize at your own risk.</div>
                 <div>BBCode output</div>
             </div>
             <div class="preview">
                 <div class="image-wrapper">
-                    <div v-for="box in boxes" :data-id="box.id" class="clickable-area">
+                    <div v-for="box in boxes" v-bind:key="box.id" :data-id="box.id" class="clickable-area">
                         <div class="drag-handle"></div>
                     </div>
                     <img class="image" :src="imageURL" alt="Could not load image.">
@@ -162,18 +162,7 @@
                 selectedID: '',
                 BBCode: '',
                 imageURL: "https://i.ppy.sh/e05f6c8fa622b10a97feab6feab88eddc10fbaf7/68747470733a2f2f63646e2e646973636f72646170702e636f6d2f6174746163686d656e74732f3936333039303839353232383530363231322f3937383031333734373234313136383931362f66696e62736d616c6c65722e706e67",
-                boxes: [
-                    {
-                        id: 1,
-                        x: 0,
-                        y: 0,
-                        sizeX: 0,
-                        sizeY: 0,
-                        url: "https://google.com",
-                        title: ""
-                    }
-                ],
-
+                boxes: [],
             },
             computed: {
                 selectedBox() {
@@ -184,64 +173,70 @@
                 boxes: {
                     deep: true,
                     handler(newBoxes, oldBoxes) {
+                        vm.$options.methods.jQueryMagic()
                         vm.$options.methods.generateBBCode()
-
-                        $(function () {
-                            $(".clickable-area").draggable({
-                                containment: ".image",
-                                handle: ".drag-handle",
-                                scroll: false,
-                                start: function (event, ui) {
-                                    vm.selectedID = $(this)[0].dataset.id
-                                    $(".clickable-area").removeClass("editing");
-                                    $(this).addClass("editing");
-                                },
-                                drag: function (params) {
-                                    let boxID = $(this)[0].dataset.id;
-                                    let box = _.find(vm.boxes, function (o) { return o.id == boxID })
-
-                                    console.log(box.x, box.y, $(this).position().top);
-
-                                    box.x = Math.max(0, ((($(this).position().left) / $(".image").width()) * 100).toFixed(2))
-                                    box.y = Math.max(0, ((($(this).position().top) / $(".image").height()) * 100).toFixed(2))
-                                },
-                            });
-
-                            $(".clickable-area").resizable({
-                                containment: ".image",
-                                handles: "se, w, n, s, e",
-                                start: function (event, ui) {
-                                    vm.selectedID = $(this)[0].dataset.id
-                                    $(".clickable-area").removeClass("editing");
-                                    $(this).addClass("editing");
-                                },
-                                resize: function (params, ui) {
-                                    let boxID = $(this)[0].dataset.id;
-                                    let box = _.find(vm.boxes, function (o) { return o.id == boxID })
-
-                                    box.x = Math.max(0, ((($(this).position().left) / $(".image").width()) * 100).toFixed(2))
-                                    box.y = Math.max(0, ((($(this).position().top) / $(".image").height()) * 100).toFixed(2))
-
-                                    box.sizeX = Math.max(0, ((ui.element.width() / $(".image").width()) * 100).toFixed(2))
-                                    box.sizeY = Math.max(0, ((ui.element.height() / $(".image").height()) * 100).toFixed(2))
-                                },
-                            });
-
-                            $(".clickable-area").click(function () {
-                                vm.selectedID = $(this)[0].dataset.id
-                                $(".clickable-area").removeClass("editing");
-                                $(this).addClass("editing");
-                            });
-
-                            $(".image").click(function () {
-                                vm.selectedID = ""
-                                $(".clickable-area").removeClass("editing");
-                            });
-                        });
                     }
                 }
             },
             methods: {
+                jQueryMagic() {
+                    $(function () {
+                        $(".clickable-area").draggable({
+                            containment: ".image",
+                            handle: ".drag-handle",
+                            scroll: false,
+                            start: function (event) {
+                                vm.selectedID = $(this)[0].dataset.id
+                                $(".clickable-area").removeClass("editing");
+                                $(this).addClass("editing");
+                            },
+                            drag: function (params) {
+                                let boxID = $(this)[0].dataset.id;
+                                let box = _.find(vm.boxes, function (o) { return o.id == boxID })
+
+                                console.log(box.x, box.y, $(this).position().top);
+
+                                box.x = Math.max(0, ((($(this).position().left) / $(".image").width()) * 100).toFixed(2))
+                                box.y = Math.max(0, ((($(this).position().top) / $(".image").height()) * 100).toFixed(2))
+
+                                box.sizeX = Math.max(0, (($(this).width() / $(".image").width()) * 100).toFixed(2))
+                                box.sizeY = Math.max(0, (($(this).height() / $(".image").height()) * 100).toFixed(2))
+                            },
+                        });
+
+                        $(".clickable-area").resizable({
+                            containment: ".image",
+                            handles: "se, w, n, s, e",
+                            start: function (event) {
+                                vm.selectedID = $(this)[0].dataset.id
+                                $(".clickable-area").removeClass("editing");
+                                $(this).addClass("editing");
+                            },
+                            resize: function (params) {
+                                let boxID = $(this)[0].dataset.id;
+                                let box = _.find(vm.boxes, function (o) { return o.id == boxID })
+
+                                box.x = Math.max(0, ((($(this).position().left) / $(".image").width()) * 100).toFixed(2))
+                                box.y = Math.max(0, ((($(this).position().top) / $(".image").height()) * 100).toFixed(2))
+
+                                box.sizeX = Math.max(0, (($(this).width() / $(".image").width()) * 100).toFixed(2))
+                                box.sizeY = Math.max(0, (($(this).height() / $(".image").height()) * 100).toFixed(2))
+                            },
+                        });
+
+                        $(".clickable-area").click(function () {
+                            vm.selectedID = $(this)[0].dataset.id
+                            $(".clickable-area").removeClass("editing");
+                            $(this).addClass("editing");
+                        });
+
+                        $(".image").click(function () {
+                            vm.selectedID = ""
+                            $(".clickable-area").removeClass("editing");
+                        });
+                    });
+                },
+
                 createNewBox() {
                     vm.boxes.push(
                         {
@@ -256,8 +251,16 @@
                     )
                 },
 
+                deleteBox() {
+                    let index = _.findIndex(vm.boxes, function (o) { return o.id == vm.selectedID })
+                    vm.boxes.splice(index, 1);
+                    vm.selectedID = ""
+                    vm.$options.methods.generateBBCode()
+                },
+
                 changeImage(url) {
                     vm.imageURL = vm.$refs.imageURL.value
+                    vm.$options.methods.generateBBCode()
                 },
 
                 generateBBCode() {
@@ -270,61 +273,6 @@
                     vm.BBCode = BBCode.replace(/^\s+|\s+$/gm, '');
                 }
             },
-
-            mounted() {
-                $(function () {
-                    $(".clickable-area").draggable({
-                        containment: ".image",
-                        handle: ".drag-handle",
-                        scroll: false,
-                        start: function (event, ui) {
-                            vm.selectedID = $(this)[0].dataset.id
-                            $(".clickable-area").removeClass("editing");
-                            $(this).addClass("editing");
-                        },
-                        drag: function (params) {
-                            let boxID = $(this)[0].dataset.id;
-                            let box = _.find(vm.boxes, function (o) { return o.id == boxID })
-
-                            console.log(box.x, box.y, $(this).position().top);
-
-                            box.x = Math.max(0, ((($(this).position().left - 16) / $(".image").width()) * 100).toFixed(2))
-                            box.y = Math.max(0, ((($(this).position().top - 16) / $(".image").height()) * 100).toFixed(2))
-                        },
-                    });
-
-                    $(".clickable-area").resizable({
-                        containment: ".image",
-                        handles: "se, w, n, s, e",
-                        start: function (event) {
-                            vm.selectedID = $(this)[0].dataset.id
-                            $(".clickable-area").removeClass("editing");
-                            $(this).addClass("editing");
-                        },
-                        resize: function (params, ui) {
-                            let boxID = $(this)[0].dataset.id;
-                            let box = _.find(vm.boxes, function (o) { return o.id == boxID })
-
-                            box.x = Math.max(0, ((($(this).position().left - 16) / $(".image").width()) * 100).toFixed(2))
-                            box.y = Math.max(0, ((($(this).position().top - 16) / $(".image").height()) * 100).toFixed(2))
-
-                            box.sizeX = Math.max(0, ((ui.element.width() / $(".image").width()) * 100).toFixed(2))
-                            box.sizeY = Math.max(0, ((ui.element.height() / $(".image").height()) * 100).toFixed(2))
-                        },
-                    });
-
-                    $(".clickable-area").click(function () {
-                        vm.selectedID = $(this)[0].dataset.id
-                        $(".clickable-area").removeClass("editing");
-                        $(this).addClass("editing");
-                    });
-
-                    $(".image").click(function () {
-                        vm.selectedID = ""
-                        $(".clickable-area").removeClass("editing");
-                    });
-                });
-            }
         });
     </script>
 </body>
