--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js "></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta name="google-site-verification" content="mweu1U9ADfUJvUHxr27nSOIMqdR97aMBL59t7E_zrYI" />
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
 </head>
