--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
     <meta name="google-site-verification" content="mweu1U9ADfUJvUHxr27nSOIMqdR97aMBL59t7E_zrYI" />
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=SUSE:wght@100..800&display=swap" rel="stylesheet">
 </head>
 
 <style>
     body {
         margin: 0;
+        background-color: rgb(109, 109, 109);
+    }
+
+    * {
+        font-family: "SUSE", sans-serif;
+        color: white;
     }
 
     #app {
         height: 100vh;
         width: 100vw;
-        background-color: black;
         display: grid;
         place-items: center;
     }
@@ -31,12 +37,13 @@
     .wrapper {
         padding: 1rem;
         border-radius: 10px;
-        width: 80%;
-        aspect-ratio: 16/9;
-        background-color: lightblue;
+        width: 90%;
+        height: 90%;
+        background-color: rgb(41, 41, 41);
         display: grid;
         grid-template-columns: 3fr 1fr;
-        grid-template-rows: 1fr 7fr;
+        grid-template-rows: 2fr 11fr;
+        filter: drop-shadow(0px 5px 7px #000000);
     }
 
     .info {
@@ -52,7 +59,7 @@
     .code {
         display: grid;
         place-items: center;
-        grid-template-rows: 14fr 1fr;
+        grid-template-rows: 18fr 1fr 2fr; /* EIGHTEEN FOR REAL!=? */
     }
 
     .toolbar {
@@ -62,10 +69,15 @@
 
     textarea {
         resize: none;
+        color: black;
     }
 
     .settings {
         text-align: center;
+    }
+
+    .settings > * {
+        margin-bottom: 0.5rem;
     }
 
     label {
@@ -75,6 +87,7 @@
 
     input {
         width: 40%;
+        color: black;
     }
 
     img {
@@ -91,14 +104,14 @@
     .clickable-area {
         position: absolute;
         background-color: rgba(0, 0, 0, 0.3);
-        outline: 2px dashed white;
+        outline: 1px dashed white;
         box-sizing: content-box;
         height: 75px;
         width: 125px;
     }
 
     .editing {
-        outline: 2px dashed red;
+        outline: 1px dashed red;
     }
 
     .drag-handle {
@@ -112,6 +125,7 @@
     button {
         height: min-content;
         width: max-content;
+        color: black;
     }
 
     .addBoxButton {
@@ -123,8 +137,18 @@
     }
 
     .BallsIDontCare {
-        text-decoration: none;
+        color: rgb(0, 153, 255);
     }
+
+    .BallsIDontCare:visited {
+        color: rgb(204, 0, 255);
+    }
+
+    .settings label {
+        display: inline-block;
+        width: 150px;
+        text-align: right;
+      }
 </style>
 
 <body>
@@ -139,10 +163,10 @@
                 </div>
                 <div class="settings" v-if="selectedID">
                     <span>Selected box</span> <br>
-                    <label for="url">URL:</label>
-                    <input type="text" class="url" id="url" v-model="selectedBox.url"></input> <br>
-                    <label for="title">Shown text on hover:</label>
-                    <input type="text" class="title" id="title" v-model="selectedBox.title"></input> <br>
+                        <label for="url">URL:</label>
+                        <input type="text" class="url" id="url" v-model="selectedBox.url"></input> <br>
+                        <label for="title">Shown text on hover:</label>
+                        <input type="text" class="title" id="title" v-model="selectedBox.title"></input> <br>
                     <button @click="deleteBox">Delete</button>
                 </div>
             </div>
@@ -159,6 +183,7 @@
             </div>
             <div class="code">
                 <textarea readonly :value="BBCode"></textarea>
+                <button @click="copytoclipboard">{{ ballsText }}</button>
                 <div>
                     <a class="BallsIDontCare" href="https://osu.ppy.sh/wiki/en/BBCode#imagemap" target="_blank">Imagemap info</a>
                 </div>
@@ -172,7 +197,8 @@
             data: {
                 selectedID: '',
                 BBCode: '',
-                imageURL: "https://via.placeholder.com/600x300",
+                ballsText: 'Copy BBCode',
+                imageURL: "https://via.placeholder.com/800x600",
                 boxes: [],
             },
             computed: {
@@ -190,6 +216,19 @@
                 }
             },
             methods: {
+                copytoclipboard() {
+                    try {
+                        navigator.clipboard.writeText(vm.BBCode);
+                        
+                        vm.ballsText = "Copied!"
+                        setTimeout(() => {
+                            vm.ballsText = "Copy BBCode"
+                        }, 5000);
+                    } catch (error) {
+                        alert("somethign is swrongh " + error)
+                    }
+                },
+
                 jQueryMagic() {
                     $(function () {
                         $(".clickable-area").draggable({
